# competitiveprogramming

./: .gitignore
codeforces/1398A/: CMakeLists.txt  main.cpp  test.h
codeforces/1398A/tests/: TestClass.cpp
codeforces/1398B/: CMakeLists.txt  main.cpp  test.h
codeforces/1398B/tests/: TestClass.cpp
codeforces/1398C/: CMakeLists.txt  main.cpp  test.h
codeforces/1398C/tests/: TestClass.cpp
codeforces/1398D/: CMakeLists.txt  main.cpp  test.h
codeforces/1398D/tests/: TestClass.cpp
codeforces/1399B/: CMakeLists.txt  main.cpp  test.h
codeforces/1399B/tests/: TestClass.cpp
codeforces/1399C/: CMakeLists.txt  main.cpp  test.h
codeforces/1399C/tests/: TestClass.cpp
codeforces/1399D/: CMakeLists.txt  main.cpp  test.h
codeforces/1399D/tests/: TestClass.cpp  TestClass.h
codeforces/1401A/: CMakeLists.txt  main.cpp  test.h
codeforces/1401A/tests/: TestClass.cpp
codeforces/1401B/: CMakeLists.txt  main.cpp  test.h
codeforces/1401B/tests/: TestClass.cpp
codeforces/1401C/: CMakeLists.txt  main.cpp  test.h
codeforces/1401C/tests/: TestClass.cpp
codeforces/1401D/: CMakeLists.txt  main.cpp  test.h
codeforces/1401D/tests/: TestClass.cpp
codeforces/1409B/: CMakeLists.txt  main.cpp  test.h
codeforces/1409B/tests/: TestClass.cpp
codeforces/1409C/: CMakeLists.txt  main.cpp  test.h
codeforces/1409C/tests/: TestClass.cpp
codeforces/1418C/: CMakeLists.txt  main.cpp  test.h
codeforces/1418C/tests/: TestClass.cpp
codeforces/1618A-Polycarp_and_Sums_of_Subsequences/: CMakeLists.txt  main.cpp  test.h
codeforces/1618B-Missing_Bigram/: CMakeLists.txt  main.cpp  test.h
codeforces/1618B-Missing_Bigram/tests/: TestClass.cpp
codeforces/1618C-Paint_the_Array/: CMakeLists.txt  main.cpp  test.h
codeforces/1618D-Array_and_Operations/: CMakeLists.txt  main.cpp  test.h
codeforces/1618F-Reverse/: CMakeLists.txt  README.md  main.cpp  test.h
codeforces/amsguru-105/: CMakeLists.txt  main.cpp  test.h
(+5 files in other folders)
